# JupyterDaskOnSLURM

./: .gitignore  .zenodo.json  CITATION.cff  Draft_Convenience_launcher.ipynb  README.md  environment.yaml  installJDOnSLURM.py  pyproject.toml  runJupyterDaskOnSLURM.py  spider_container_deploy.sh  user-guide.md
config/conda/: environment.yaml
config/container/: spider.yaml
config/dask/: README.md  config.yml  config_delftblue.yml  config_snellius.yml  config_spider.yml
config/dask/snellius/: distributed.yaml  jobqueue.yaml  labextension.yaml
config/dask/spider/: jobqueue.yaml
config/fsspec/: conf.json
config/hpc-container-wrapper/: spider.yaml
examples/01-STAC-on-dCache/: README.md
examples/01-STAC-on-dCache/notebooks/: 01-retrieval.ipynb  02-processing.ipynb
scripts/: jupyter_dask.bsh  jupyter_dask_delftblue.bsh  jupyter_dask_snellius.bsh  jupyter_dask_spider.bsh  jupyter_dask_spider_container.bsh  jupyterdask-delftblue.slurm  jupyterdask-snellius.slurm  jupyterdask-spider.slurm  spider_container_deploy.sh
scripts/batch-job/: jupyter_dask_delftblue.bsh  jupyter_dask_spider.bsh  jupyterdask-spider-ag.slurm
src/jupyter_dask_on_slurm/: installJDOnSLURM.py  runJupyterDaskOnSLURM.py  utils.py
tools/jupyterdask/: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
tools/jupyterdask/jupyterdask/: __main__.py  cli.py  config.py  main.py  remote.py  run.py  template.py
tools/jupyterdask/jupyterdask/templates/: template.slurm
