[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyterdask"
version = "0.3.0"
requires-python = ">=3.10"
dependencies = [
    "decorator",
    "fabric",
    "invoke",
    "Jinja2",
]
description = "setup and run a Jupyter server and a Dask cluster on a SLURM system"
readme = "README.md"
license = {text = "Apache 2.0"}
classifiers=[
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
]

[tool.ruff]
lint.select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "D",  # pydocstyle
    "I",  # isort
    "N",  # PEP8-naming
    "UP",  # pyupgrade (upgrade syntax to current syntax)
    "PLE",  # Pylint error https://github.com/charliermarsh/ruff#error-ple
]
line-length = 88
lint.ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D203",  # Incorrect blank line before class
    "D213",  # Multi-line summary second line
]

[project.urls]
repository = "https://github.com/RS-DAT/JupyterDaskOnSLURM"
documentation = "https://github.com/RS-DAT/JupyterDaskOnSLURM/blob/main/README.md"

[project.scripts]
jupyterdask = "jupyterdask.main:main"

[tool.setuptools.package-data]
"jupyterdask.templates" = ["template.slurm"]
